--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,17 @@
 @tailwind utilities;
 
 button > svg {
-    margin-right: 5px;
+  margin-right: 5px;
+}
+
+.star-icon {
+  --icon-size: 32px;
+
+  cursor: pointer;
+  height: var(--icon-size);
+  width: var(--icon-size);
+}
+
+.star-icon-filled {
+  fill: yellow;
 }
